<resources>
    <string name="app_name">SPMS</string>
    <string name="login_welcome">欢 迎 进 入</string>
    <string name="login_companyName">研 华 智 能 光 伏 电 站</string>
    <string name="login_loginName">用户名 ：</string>
    <string name="login_TW_loginName">用戶名 ：</string>
    <string name="login_English_loginName">User name ：</string>
    <string name="login_password1">密码：</string>
    <string name="login_language1">语</string>
    <string name="login_language2">言：</string>
    <string name="login_password2">码：</string>
    <string name="login_TW_password1">密碼：</string>
    <string name="login_TW_password2">碼：</string>
    <string name="login_English_password1">Password</string>
    <string name="login_button">登 录</string>
    <string name="login1_title">请输入SPMS服务器</string>
    <string name="login1_English_title">Please enter a SPMS server</string>
    <string name="login1_TW_title">請輸入SPMS服務器</string>
    <string name="login1_title1">地址：</string>
    <string name="login1_TW_title1">地址：</string>
    <string name="login1_English_title1">Address：</string>
    <string name="login1_title2">如：IP，URL</string>
    <string name="login1_TW_title2">如：IP，URL</string>
    <string name="login1_English_title2">as：IP，URL</string>
    <string name="login1_button">下一步</string>
    <string name="login1_TW_button">下壹步</string>
    <string name="login1_English_button">Next step</string>
    <string name="login2_title">是否自动登录？</string>
    <string name="login2_TW_title">是否自動登錄？</string>
    <string name="login2_English_title">Do you want to log in automatically?</string>
    <string name="login2_button">是</string>
    <string name="login2_TW_button">是</string>
    <string name="login2_English_button">yes</string>
    <string name="login2_button1">否，跳过</string>
    <string name="login2_TW_button1">否，跳過</string>
    <string name="login2_English_button1">No, skip</string>
    <string name="login3_title">请输入用户名和密码：</string>
    <string name="login3_TW_title">請輸入用戶名和密碼：</string>
    <string name="login3_English_title">Please enter your username and password:</string>
    <string name="login3_button">确认</string>
    <string name="login3_TW_button">確認</string>
    <string name="login3_English_button">confirm</string>
    <string name="login3_button1">取消</string>
    <string name="login3_TW_button1">取消</string>
    <string name="login3_English_button1">cancel</string>
    <string name="login4_title">是否记住用户名？</string>
    <string name="login4_TW_title">是否記住用戶名？</string>
    <string name="login4_English_title">Do remember the user name?</string>
    <string name="login5_title">是否记住密码？</string>
    <string name="login5_TW_title">是否記住密碼？</string>
    <string name="login5_English_title">Do remember the password?</string>
    <string name="login5_title1">显示密码</string>
    <string name="login5_TW_title1">顯示密碼</string>
    <string name="login5_English_title1">Display password</string>
    <string name="login5_button">重新输入用户名</string>
    <string name="login5_TW_button">重新輸入用戶名</string>
    <string name="login5_English_button">Enter user name</string>
    <string name="alarm_companyName">研华光伏电站运维中心</string>
    <string name="alarm_TW_companyName">研華智能光伏電站</string>
    <string name="alarm_English_companyName">研华智能光伏电站</string>
    <string name="alarm_title">报警列表</string>
    <string name="alarm_button">查询</string>
    <string name="planet_prompt">Choose a spingarr</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="pull_to">Pull to refresh</string>

    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉刷新</string>
    <string name="release_to_load">释放立即刷新</string>
    <string name="loading">正在刷新...</string>
    <string name="load_succeed">刷新成功</string>
    <string name="load_fail">刷新失败</string>

</resources>
