<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">
<TextView
    android:id="@+id/tv_login2_title1"
    android:layout_marginTop="80dp"
    android:textSize="20sp"
    android:layout_gravity="center_horizontal"
    android:text="@string/login2_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_login2_yes"
        android:textColor="@color/color_button"
        android:layout_marginTop="100dp"
        android:text="@string/login2_button"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_style"
        android:layout_width="80dp"
        android:layout_height="30dp" />
    <Button
        android:id="@+id/btn_login2_no"
        android:textColor="@color/color_button"
        android:layout_marginTop="20dp"
        android:text="@string/login2_button1"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_style1"
        android:layout_width="80dp"
        android:layout_height="30dp" />
</LinearLayout>